@@ -850,7 +850,7 @@ main (int argc, char *argv[])
 
 	/* DEBUG xfrd */
 	void xfrd_init(int, struct nsd*);
-	if(0) xfrd_init(-1, &nsd);
+	if(1) xfrd_init(-1, &nsd);
 
 	if (nsd.server_kind == NSD_SERVER_MAIN) {
 		server_main(&nsd);
