@@ -1,8 +1,12 @@
 29 Mar 2006: Wouter
 	- \r for config lexer. (similar changes to zonelexer).
 	- forward port of fix to 2_2 branch:
-	short int in var_arg is promoted to int, according to B. Laurie.
-	The same logic for %o, %d %x would hold for %u I think.
+	  short int in var_arg is promoted to int, according to B. Laurie.
+	  The same logic for %o, %d %x would hold for %u I think.
+	- in XFRD, soa prim_ns and email domain names are kept in a max
+	  size buffer.
+	- split up dname_parse into parse from string to wireformat
+	  and parse from wireformat to memoryformat, so both can be called.
 
 28 Mar 2006: Miek
 	- forward port fixes for zone compiler and \r. svn:1926-1927
